--- a/index.html
+++ b/index.html
@@ -1,169 +1,157 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8">
-<title>Thiệp Giáng Sinh</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Thiệp Giáng Sinh</title>
 
-<style>
-* {
-  box-sizing: border-box;
-}
+  <style>
+    * {
+      box-sizing: border-box;
+      font-family: "Segoe UI", sans-serif;
+    }
 
-body {
-  margin: 0;
-  height: 100vh;
-  background: linear-gradient(180deg, #ffd1dc, #ff9acb);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Segoe UI", sans-serif;
-  overflow: hidden;
-}
+    body {
+      margin: 0;
+      min-height: 100vh;
+      background: linear-gradient(135deg, #ff9ebc, #ffd1dc);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+    }
 
-/* KHUNG TRUNG TÂM */
-.scene {
-  position: relative;
-  width: 360px;
-  height: 520px;
-}
+    /* ===== ENVELOPE ===== */
+    .envelope {
+      position: relative;
+      width: 90vw;
+      max-width: 360px;
+      height: 220px;
+      background: #ff6f91;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
 
-/* ================= PHONG BÌ ================= */
-.envelope {
-  position: absolute;
-  inset: 0;
-  margin: auto;
-  width: 360px;
-  height: 220px;
-  background: #ffb6c1;
-  border-radius: 14px;
-  border: 2px solid #ff8fb1;
-  box-shadow: 0 25px 50px rgba(255, 20, 147, 0.35);
-  cursor: pointer;
-  transition: transform 0.9s ease, opacity 0.9s ease;
-  z-index: 3;
-}
+    .envelope:hover {
+      transform: scale(1.03);
+    }
 
-/* NẮP TAM GIÁC */
-.envelope::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #ffa6c9;
-  clip-path: polygon(0 0, 50% 55%, 100% 0);
-  border-radius: 14px 14px 0 0;
-}
+    .flap {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #ff4f7a;
+      clip-path: polygon(0 0, 50% 55%, 100% 0, 100% 100%, 0 100%);
+      border-radius: 12px;
+      z-index: 3;
+    }
 
-.envelope-text {
-  position: absolute;
-  bottom: 18px;
-  width: 100%;
-  text-align: center;
-  color: white;
-  font-weight: bold;
-  letter-spacing: 1px;
-}
+    .label {
+      position: absolute;
+      bottom: 20px;
+      width: 100%;
+      text-align: center;
+      color: #fff;
+      font-weight: bold;
+      font-size: 1.1rem;
+      z-index: 4;
+    }
 
-/* ================= LÁ THƯ ================= */
-.letter {
-  position: absolute;
-  inset: 0;
-  margin: auto;
-  width: 320px;
-  height: 420px;
+    /* ===== LETTER ===== */
+    .letter {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%) scale(0);
+      width: 85vw;
+      max-width: 340px;
+      height: 420px;
+      background: url("bg-pink-christmas.jpg") center/cover no-repeat;
+      border-radius: 16px;
+      padding: 24px;
+      text-align: center;
+      color: #fff;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+      z-index: 2;
+      transition: all 0.6s ease;
+      overflow: hidden;
+    }
 
-  /* ẢNH NỀN */
-  background-image: url("bg-pink-christmas.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+    .letter::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(255, 105, 135, 0.7);
+      z-index: 0;
+    }
 
-  /* LỚP PHỦ MỜ ĐỂ CHỮ DỄ ĐỌC */
-  background-color: rgba(255, 255, 255, 0.35);
-  background-blend-mode: lighten;
+    .letter-content {
+      position: relative;
+      z-index: 1;
+    }
 
-  border-radius: 22px;
-  border: 2px solid #ffc1d6;
-  box-shadow: 0 30px 65px rgba(255, 20, 147, 0.45);
-  padding: 28px;
-  text-align: center;
+    .letter h1 {
+      margin-top: 30px;
+      font-size: 1.8rem;
+    }
 
-  transform: translateY(120px) scale(0.95);
-  opacity: 0;
-  transition: transform 0.9s ease, opacity 0.9s ease;
-  z-index: 2;
-}
+    .letter p {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      margin-top: 20px;
+    }
 
+    /* ===== OPEN STATE ===== */
+    .envelope.open .letter {
+      transform: translateX(-50%) translateY(-160px) scale(1);
+      z-index: 5;
+    }
 
-.letter h1 {
-  color: #ff4f9a;
-  text-shadow: 0 0 8px rgba(255, 79, 154, 0.6);
-}
+    .envelope.open .flap {
+      z-index: 1;
+    }
 
-.letter p {
-  margin-top: 18px;
-  color: #555;
-  line-height: 1.6;
-}
+    /* ===== RESPONSIVE ===== */
+    @media (min-width: 768px) {
+      .envelope {
+        max-width: 420px;
+        height: 260px;
+      }
 
-.btn {
-  margin-top: 30px;
-  padding: 10px 26px;
-  border: none;
-  border-radius: 24px;
-  background: linear-gradient(135deg, #ff69b4, #ff1493);
-  color: white;
-  cursor: pointer;
-  box-shadow: 0 8px 20px rgba(255, 20, 147, 0.4);
-}
+      .letter {
+        height: 460px;
+      }
 
-/* ================= KHI MỞ ================= */
-.scene.open .envelope {
-  transform: translateY(260px);
-  opacity: 0;
-  pointer-events: none;
-}
+      .letter h1 {
+        font-size: 2.2rem;
+      }
 
-.scene.open .letter {
-  transform: translateY(0) scale(1);
-  opacity: 1;
-}
-</style>
+      .letter p {
+        font-size: 1.2rem;
+      }
+    }
+  </style>
 </head>
-
 <body>
 
-<div class="scene" id="scene">
+  <div class="envelope" onclick="this.classList.toggle('open')">
+    <div class="flap"></div>
+    <div class="label">💌 Nhấn để mở thư</div>
 
-  <div class="envelope" onclick="openLetter()">
-    <div class="envelope-text">📩 Nhấn để mở thư</div>
+    <div class="letter">
+      <div class="letter-content">
+        <h1>🎄 Merry Christmas 🎄</h1>
+        <p>
+          Chúc bạn một mùa Giáng Sinh thật ấm áp,<br>
+          ngập tràn yêu thương, hạnh phúc<br>
+          và những điều ngọt ngào nhất 💖
+        </p>
+      </div>
+    </div>
   </div>
-
-  <div class="letter">
-    <h1>Merry Christmas</h1>
-    <p>
-      Chúc bạn một mùa Giáng Sinh<br>
-      thật ấm áp, bình an<br>
-      và ngập tràn yêu thương 💖
-    </p>
-    <button class="btn" onclick="closeLetter()">Quay lại</button>
-  </div>
-
-</div>
-
-<script>
-const scene = document.getElementById("scene");
-
-function openLetter() {
-  scene.classList.add("open");
-}
-
-function closeLetter() {
-  scene.classList.remove("open");
-}
-</script>
 
 </body>
 </html>
